# robot-framework-reporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  tests.yml
src/: Testomatio.py
src/api_connectors/: exception.py  testomatio_connector.py
src/models/: test_item.py  testomat_item.py  testrun_config.py
src/reporter/: __init__.py  listener.py
src/utils/: constants.py  test_parser.py  utils.py
tests/test_api_connectors/: test_testomatio_connector.py
tests/test_models/: test_testitem.py  test_testomat_item.py  test_testrun_config.py
tests/test_reporter/: test_listener.py
tests/test_utils/: test_testParser.py  test_utility_functions.py
